add series page

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <div>
                 <a href="livescore.html" class="anker-in-navbar">Live Scores</a>
             </div>
-            <div><a href="" class="anker-in-navbar">Series</a> </div>
+            <div><a href="series.html" class="anker-in-navbar">Series</a> </div>
             <div><a href="teams.html" class="anker-in-navbar">Teams</a></div>
             <div><a href="" class="anker-in-navbar">News</a></div>
             <div><a href="" class="anker-in-navbar">Features</a></div>
