--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
 
     <script
     src="https://kit.fontawesome.com/24c494a6b6.js"
@@ -349,8 +349,8 @@
             </div>
             <div><a href="series.html" class="anker-in-navbar">Series</a> </div>
             <div><a href="teams.html" class="anker-in-navbar">Teams</a></div>
-            <div><a href="" class="anker-in-navbar">News</a></div>
-            <div><a href="" class="anker-in-navbar">Features</a></div>
+            <div><a href="news.html" class="anker-in-navbar">News</a></div>
+            <div><a href="features.html" class="anker-in-navbar">Features</a></div>
             <div><a href="videos.html" class="anker-in-navbar">Videos</a></div>
         </div>
         <div id="nav-bar-second-part">
