--- a/series.html
+++ b/series.html
@@ -6,7 +6,7 @@
         <title>Series</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css" type="text/css">
+        <link rel="stylesheet" href="style1.css" type="text/css">
     </head>
     <body>
         <header>
